updated colors and spacing

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@nine4/ui-kit",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": ["dist", "src", "README.md"],
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "build:publish": "npx -y typescript@^5.7.2 tsc -p tsconfig.json",
+    "build:publish": "npx -y -p typescript@^5.7.2 tsc -p tsconfig.json",
     "prepublishOnly": "npm run build:publish",
     "test": "npm run test:unit",
     "test:unit": "jest"
